2006-01-23  Sushma Rai  <rsushma@novell.com>

	* exchange-operations.c 
	(exchange_operations_cta_select_node_from_tree): Checking for the NULL
	URI, Fixes #328282.

2006-01-23  Sushma Rai  <rsushma@novell.com>

	* exchange-account-setup.c (camel_exchange_ntlm): Setting the authproto
	value to NTLM, which is used later. 
	(org_gnome_exchange_auth_section): Reading the auth type from 
	ExchangeAccount and setting it in URL if the url doesn't contain the
	auth mechanism value. Since the auth mechanism is not set using the 
	authentication type tab in druid during account setup, when the editor
	is invoked, it doesn't get set in the account URI. Fixes #327284.

2006-01-19  Andre Klapper <a9016009@gmx.de>

	* org-gnome-exchange-operations.error.xml:
	changed "mails" to "mail" or "messages", removed duplicated
	whitespaces. Fixes bug 325569.

2006-01-18  Sushma Rai  <rsushma@novell.com>

	* exchange-contacts.c (e_exchange_contacts_pcontacts): Displaying the
	offline message for both Exchange personal and GAL folders. 
	Fixes #327483.

2006-01-16  Harish Krishnaswamy  <kharish@novell.com>

	* org-gnome-exchange-operations.error.xml:
	Fixed a minor typo in error string. (#327053).

2006-01-16  Harish Krishnaswamy  <kharish@novell.com>

	* exchange-config-listener.c: (display_passwd_expiry_message):
	Fix a grammar error in translatable string. (#327155)

2006-01-13  Sushma Rai  <rsushma@novell.com>

	* exchange-config-listener.c (exchange_config_listener_authenticate):
	Set the "save-passwd" parameter value EAccount. Fixes #326842.

2006-01-13  Sushma Rai  <rsushma@novell.com>

	* exchange-config-listener.c: Added krb5 checks while invoking
	change_passwd_cb() and exchange_config_listener_authenticate().

2006-01-11  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #271546
	* exchange-folder.c: (org_gnome_exchange_calendar_subscription),
	(org_gnome_exchange_addressbook_subscription),
	(org_gnome_exchange_tasks_subscription),